making architecture, some styling

--- a/src/less/index.less
+++ b/src/less/index.less
@@ -1,6 +1,6 @@
-@import './helpers/_variables.less';
-@import './helpers/_base.less';
+@import './helpers/variables.less';
+@import './fonts/open-sans.less';
+@import './helpers/base.less';
+@import './components/components.less';
 
-body {
-	background-color: black;
-}
+@import './pages/pages.less';
