add form, some labels and inputs

--- a/src/less/pages/home/home.less
+++ b/src/less/pages/home/home.less
@@ -1,8 +1,10 @@
+@import './form.less';
 .home {
   &__content {
     height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
   }
 }
